// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReconScansListPage — snapshots > matches the empty-state snapshot in Arabic (RTL) 1`] = `
<div>
  <div>
    <div
      class="mb-4 sm:mb-6 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-xl sm:text-2xl font-semibold text-foreground"
        >
          الاستطلاع
        </h1>
        <p
          class="text-sm sm:text-base text-muted-foreground mt-1"
        >
          عمليات فحص أمنية مُصرَّح بها لمشاريعك.
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 gap-1.5"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        فحص جديد
      </button>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="inline-flex h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground w-full sm:w-auto"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r4q:-content-running"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-:r4q:-trigger-running"
          role="tab"
          tabindex="-1"
          type="button"
        >
          قيد التشغيل
        </button>
        <button
          aria-controls="radix-:r4q:-content-completed"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4q:-trigger-completed"
          role="tab"
          tabindex="-1"
          type="button"
        >
          مكتمل
        </button>
        <button
          aria-controls="radix-:r4q:-content-failed"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4q:-trigger-failed"
          role="tab"
          tabindex="-1"
          type="button"
        >
          فاشل
        </button>
        <button
          aria-controls="radix-:r4q:-content-all"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4q:-trigger-all"
          role="tab"
          tabindex="-1"
          type="button"
        >
          الكل
        </button>
      </div>
    </div>
    <div
      class="mt-4 border rounded-lg bg-card"
    >
      <div
        class="flex flex-col items-center justify-center py-16 px-6 text-center"
        data-testid="scans-empty"
      >
        <div
          class="h-12 w-12 rounded-lg border bg-muted/50 flex items-center justify-center mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield-check h-6 w-6 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <h2
          class="text-base font-semibold text-foreground"
        >
          لا توجد فحوصات بعد
        </h2>
        <p
          class="text-sm text-muted-foreground mt-1 max-w-md"
        >
          ابدأ فحصاً مُصرَّحاً به لرؤية النتائج هنا.
        </p>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 gap-1.5"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            فحص جديد
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="location-search"
  />
</div>
`;

exports[`ReconScansListPage — snapshots > matches the empty-state snapshot in English 1`] = `
<div>
  <div>
    <div
      class="mb-4 sm:mb-6 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-xl sm:text-2xl font-semibold text-foreground"
        >
          Recon
        </h1>
        <p
          class="text-sm sm:text-base text-muted-foreground mt-1"
        >
          Authorized security scans for your projects.
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 gap-1.5"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        New scan
      </button>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="inline-flex h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground w-full sm:w-auto"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r4f:-content-running"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-:r4f:-trigger-running"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Running
        </button>
        <button
          aria-controls="radix-:r4f:-content-completed"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4f:-trigger-completed"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Completed
        </button>
        <button
          aria-controls="radix-:r4f:-content-failed"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4f:-trigger-failed"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Failed
        </button>
        <button
          aria-controls="radix-:r4f:-content-all"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm flex-1 sm:flex-initial"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r4f:-trigger-all"
          role="tab"
          tabindex="-1"
          type="button"
        >
          All
        </button>
      </div>
    </div>
    <div
      class="mt-4 border rounded-lg bg-card"
    >
      <div
        class="flex flex-col items-center justify-center py-16 px-6 text-center"
        data-testid="scans-empty"
      >
        <div
          class="h-12 w-12 rounded-lg border bg-muted/50 flex items-center justify-center mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield-check h-6 w-6 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <h2
          class="text-base font-semibold text-foreground"
        >
          No scans yet
        </h2>
        <p
          class="text-sm text-muted-foreground mt-1 max-w-md"
        >
          Start a new authorized scan to see results here.
        </p>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 gap-1.5"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New scan
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="location-search"
  />
</div>
`;
